# vados

./: Cargo.toml  LICENSE-MIT  PULL_REQUEST_TEMPLATE.md  README.md  config.json
.github/workflows/: ci.yml
src/: bulma.rs  config_files.rs  content.rs  files.rs  generator.rs  image.rs  lib.rs  main.rs  structure.rs  templates.rs
templates/: breadcrumbs.html  content.html  content_notification.html  external_notification.html  footer.html  internal_image.html  internal_notification.html  navigation.html  page.html  side_menu.html
