[package]
name = "vados"
version = "0.0.1"
authors = ["Gerard Klijs <g.klijs@gmail.com>"]
include = ["src/**/*", "templates/**/*", "Cargo.toml"]
description = "A Html generator, used with Bulma and a certain file structure to generate a static site"
repository = "https://github.com/gklijs/vados"
readme = "README.md"
keywords = ["html", "static", "generator"]
categories = ["filesystem", "web-programming"]
license = "MIT"
edition = "2021"

[dependencies]
askama = "0.11.0"
dashmap = "5.1.0"
pulldown-cmark = { version = "0.9.1", default-features = false, features = ["simd"] }
serde = {version = "1.0.135", features = ["derive"]}
serde_json = "1.0.78"
walkdir = "2.3.2"
